Complete html and css calculator blueprint

--- a/index.html
+++ b/index.html
@@ -7,7 +7,33 @@
     <title>Calculator</title>
 </head>
 <body>
-    
+    <div class="calculator-container">
+        <div class="display"></div>
+        <div class="buttons-container">
+            <div class="numbers-container">
+                <button>1</button>
+                <button>2</button>
+                <button>3</button>
+                <button>4</button>
+                <button>5</button>
+                <button>6</button>
+                <button>7</button>
+                <button>8</button>
+                <button>9</button>
+                <button>0</button>
+                <button>Free Space</button>
+                <button>Free Space</button>
+            </div>
+            <div class="operations-container">
+                <button>Clear</button>
+                <button>+</button>
+                <button>-</button>
+                <button>*</button>
+                <button>/</button>
+                <button>=</button>
+            </div>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
